MyShell.java Fleshed out just needs to be re-implemented for windows 10.